# csf_profile

./: .dockerignore  .env.example  .gitignore  .~lock.DOCKER_SECURITY.md#  .~lock.README.md#  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER_SECURITY.md  Dockerfile  README.md  SCREENSHOTS.md  SECURITY.md  Simply_Cyber_Mission_and_Values.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  yyyy-mm-dd_CSF_Profile.csv
ASSESSMENT_CATALOG/: README.md
Assessment_Artifacts/: PR-IP.md
Assessment_Catalog/: README.md
EXAMPLE BUSINESS CASE STUDY FOR ASSESSMENT/: Alma Security Backgrounder.docx  Alma Security Business Case.docx  PR-AA-06-Physical-Access-Assessment.md  README.md  alma_assessments.csv  alma_controls.csv
Implementation_Description/: PR-IP.md
SPREADSHEETS/: JIRA-Artifacts.csv  JIRA-Assessments.csv  JIRA-Findings.csv  yyyy-mm-dd_CSF_Profile.csv  yyyy-mm-dd_CSF_Profile.xlsx
Sample_Artifacts/: AWS_Tag_Compliance_Report.md  Access Management Policy.md  GV-RM-02-Assessment-Artifacts.md  Hardware_Inventory_Sample.md  Nmap_Scan_Results.md  README.md  SOC-Ticket-1001.md  Sampling_Walkthrough.md
Sample_Observations/: PR-AA-05-Q1-Observation.md  README.md
Test_Procedures/: PR-IP.MD  PR-IP.md  README.md
atlassian-integration/: .dockerignore  .gitignore  Dockerfile  README.md  SETUP-GUIDE.md  package-lock.json  package.json
public/: Confluence-Requirements.csv  tblProfile_Demo.csv
sample_csv_exports/: users_export.csv
scripts/: decrypt-export.mjs
src/: App.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+802 files in other folders)
